--- a/learn_spring/person_prac/pom.xml
+++ b/learn_spring/person_prac/pom.xml
@@ -5,15 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.example</groupId>
-  <artifactId>learn_spring</artifactId>
-  <packaging>pom</packaging>
+  <artifactId>person_prac</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <modules>
-    <module>thinking_spring</module>
-    <module>person_prac</module>
-  </modules>
 
-  <name>learn_spring</name>
+  <name>person_prac</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
