--- a/learn_spring/thinking_spring/pom.xml
+++ b/learn_spring/thinking_spring/pom.xml
@@ -8,6 +8,9 @@
     <artifactId>thinking_spring</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <modules>
+        <module>ioc-container-overview</module>
+    </modules>
 
     <name>thinking_spring</name>
 
@@ -47,10 +50,6 @@
 
     <!--添加maven依赖-->
     <dependencies>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
